--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -5,3 +5,26 @@
 
 
 // In processing ...
+
+a,
+a:hover,
+a:visited,
+a:active,
+a:focus {
+    text-decoration: none;
+}
+
+button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+input {
+    border: none;
+    outline: none;
+}
+
+main {
+    background-color: red;
+}
