--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -5,6 +5,8 @@
 :root {
     // Colors
 
+    --color-white: #FFFFFF;
+    --color-black: #000000;
     --color-blue: #274C5B;
     --color-green: #7EB693;
     --color-yellow: #EFD372;
