feat(frontend/header): write adaptive SCSS styles for Header component and create BurgerButton component

--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -1,14 +1,30 @@
-@use "../../styles/index.scss" as *;
+@use "../../styles/index" as *;
 
 .header {
 
     &__inner {
         max-width: 1596px !important;
+
+        @media (max-width: 1644px) {
+            padding-inline: var(--container-padding-inline);
+        }
     }
 
     &__row {
         padding-block: 69px;
         align-items: center;
+
+        @include laptop {
+            padding-block: 49px;
+        }
+
+        @include mobile {
+            padding-block: 29px;
+        }
+
+        @include mobile-small {
+            padding-block: 19px;
+        }
     }
 
     &__column {}
@@ -17,13 +33,33 @@
 
     &__logo-link {}
 
-    &__column--2 {}
+    &__logo {
+        @media (max-width: 1644px) {
+            width: 169px;
+            height: 50px;
+        }
+
+        @include mobile-small {
+            width: 130px;
+            height: 40px;
+        }
+    }
+
+    &__column--2 {
+        @include tablet {
+            display: none !important;
+        }
+    }
 
     &__navigation {}
 
     &__navigation-list {
         display: flex;
         gap: 40px;
+
+        @media (max-width: 1644px) {
+            gap: 30px;
+        }
     }
 
     &__navigation-list-item {}
@@ -33,6 +69,10 @@
         @include fluid-text(20, 16);
         @include font(var(--font-family), 700, 1);
         color: var(--color-blue);
+
+        @media (max-width: 1170px) {
+            @include fluid-text(16, 14);
+        }
     }
 
     &__navigation-button {
@@ -48,6 +88,10 @@
     &__column--3 {
         flex-direction: row !important;
         gap: 18px;
+
+        @media (max-width: 1644px) {
+            gap: 14px;
+        }
     }
 
     &__search {
@@ -65,6 +109,14 @@
         @include font(var(--font-family), 700, 1);
         color: var(--color-blue);
         caret-color: var(--color-blue);
+
+        @media (max-width: 1310px) {
+            width: 270px;
+        }
+
+        @include tablet {
+            width: 320px;
+        }
     }
 
     &__input--search {}
@@ -97,7 +149,13 @@
         width: 160px;
         border: var(--border-default);
         border-radius: 36px;
-        padding-left: 55px;
+        padding-left: 70px;
+        align-items: center;
+
+        @media (max-width: 1310px) {
+            width: 67px;
+            padding: 0;
+        }
     }
 
     &__button--cart-decoration {
@@ -105,7 +163,7 @@
         top: 4px;
         left: 5px;
         width: 56px;
-        height: 56px;
+        height: 57px;
         background-color: var(--color-blue);
         border-radius: 50%;
 
@@ -121,6 +179,10 @@
         @include fluid-text(20, 16);
         @include font(var(--font-family), 700, 1);
         color: var(--color-blue);
+
+        @media (max-width: 1310px) {
+            display: none;
+        }
     }
 
     &__dropdown--cart {}
