--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -39,6 +39,7 @@
 
     --container-width-default: 1400px;
     --container-padding-inline: 24px;
+    --container-padding-inline-small: 12px;
 
     //
     // the margins between sections are not set
