--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -25,6 +25,16 @@ input {
     outline: none;
 }
 
+body {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    overflow-x: hidden
+}
+
+body::-webkit-scrollbar {
+    display: none;
+}
+
 main {
     background-color: red;
 }
