--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -1,6 +1,9 @@
 @use "../../styles/index" as *;
 
 .header {
+    position: relative;
+    background-color: var(--color-white);
+    z-index: 9;
 
     &__inner {
         max-width: 1596px !important;
