--- a/frontend/src/components/BurgerButton/BurgerButton.scss
+++ b/frontend/src/components/BurgerButton/BurgerButton.scss
@@ -6,7 +6,7 @@
     width: 66px;
     height: 66px;
     padding: 5px;
-    border-radius: 36px;
+    border-radius: 50%;
 
     @include tablet {
         display: flex;
@@ -21,7 +21,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 55px;
+        width: 56px;
         height: 56px;
         padding: 20px 17px;
         border-radius: 50%;
