--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -18,6 +18,7 @@ button {
     border: none;
     outline: none;
     background-color: transparent;
+    padding: 0;
 }
 
 input {
@@ -33,8 +34,4 @@ body {
 
 body::-webkit-scrollbar {
     display: none;
-}
-
-main {
-    background-color: red;
 }
