--- a/frontend/src/components/IntroBlockNaturalFood/IntroBlockNaturalFood.scss
+++ b/frontend/src/components/IntroBlockNaturalFood/IntroBlockNaturalFood.scss
@@ -32,15 +32,36 @@
         display: block;
     }
 
+    &__link--natural-food {
+        width: 220px;
+    }
+
     &__button--natural-food {
         width: 220px;
         background-color: var(--color-yellow);
         color: var(--color-blue);
+        transition: background-color var(--transition);
 
         & svg {
             position: relative;
             top: 3px;
             left: 7px;
+        }
+
+        @include desktop-screen {
+
+            &:hover,
+            &:focus-visible {
+                background-color: var(--color-darkyellow);
+            }
+        }
+
+        @include touch-screen {
+
+            &:hover,
+            &:focus-visible {
+                background-color: var(--color-yellow);
+            }
         }
     }
 
