--- a/frontend/src/components/CouponsSection/CouponsSection.scss
+++ b/frontend/src/components/CouponsSection/CouponsSection.scss
@@ -39,6 +39,7 @@
         border-radius: 36px;
         background-size: cover;
         background-position: center;
+        transition: transform var(--transition);
 
         @include tablet {
             width: 682px;
@@ -51,6 +52,22 @@
 
         @include mobile-small {
             width: 90%;
+        }
+
+        @include desktop-screen {
+
+            &:hover,
+            &:focus-visible {
+                transform: scale(1.02);
+            }
+        }
+
+        @include touch-screen {
+
+            &:hover,
+            &:focus-visible {
+                transform: none;
+            }
         }
     }
 
