fix(frontend/dropdownpages): fix bug with the first click on the button

--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -40,3 +40,8 @@ body::-webkit-scrollbar {
 *:focus-visible {
     outline: none;
 }
+
+// *:focus,
+// *:focus-visible {
+//     outline: 1px solid green;
+// }
