--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -8,11 +8,11 @@
     --color-white: #FFFFFF;
     --color-black: #000000;
     --color-blue: #274C5B;
-    --color-darkblue: #1f3d49;
+    --color-darkblue: #1F3D49;
     --color-green: #7EB693;
-    --color-darkgreen: #6e9f80;
+    --color-darkgreen: #6E9f80;
     --color-yellow: #EFD372;
-    --color-darkyellow: #d2bb65;
+    --color-darkyellow: #e7cd6e;
     --color-gray: #D4D4D4;
     --color-dark-gray: #525C60;
     --color-lightgray: #F9F8F8;
