--- a/frontend/src/styles/_globals.scss
+++ b/frontend/src/styles/_globals.scss
@@ -45,3 +45,7 @@ body::-webkit-scrollbar {
 // *:focus-visible {
 //     outline: 1px solid green;
 // }
+
+// * {
+//     outline: 1px solid green;
+// }
