--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -12,7 +12,8 @@
     --color-green: #7EB693;
     --color-darkgreen: #6E9f80;
     --color-yellow: #EFD372;
-    --color-darkyellow: #e7cd6e;
+    --color-darkyellow: #E7CD6E;
+    --color-orange: #FFA858;
     --color-gray: #D4D4D4;
     --color-dark-gray: #525C60;
     --color-lightgray: #F9F8F8;
