--- a/frontend/src/components/MoreNewsSection/MoreNewsSection.scss
+++ b/frontend/src/components/MoreNewsSection/MoreNewsSection.scss
@@ -4,17 +4,41 @@
 
     &__inner {
         padding-block: 177px 250px;
+
+        @include laptop {
+            padding-block: 130px 210px;
+        }
+
+        @include mobile {
+            padding-block: 100px 180px;
+        }
+
+        @include mobile-small {
+            padding-block: 80px 140px;
+        }
     }
 
     &__row {}
 
-    &__row--1 {}
+    &__row--1 {
+        @include mobile {
+            flex-direction: column !important;
+        }
+    }
 
     &__column--1 {
         width: 50%;
         display: flex;
         flex-direction: column;
         gap: 8px;
+
+        @include tablet {
+            width: 60%;
+        }
+
+        @include mobile {
+            width: 100%;
+        }
     }
 
     &__promo {}
@@ -58,17 +82,31 @@
                 color: var(--color-blue);
             }
         }
+
+        @include mobile {
+            margin-top: 30px;
+        }
     }
 
     &__row--2 {
         padding-top: 48px;
         gap: 46px;
+
+        @include mobile {
+            flex-direction: column !important;
+        }
     }
 
     &__column {}
 
-    &__column--3 {
+    &__column--3,
+    &__column--4 {
         width: 50%;
+
+        @include mobile {
+            width: 100%;
+            margin-inline: auto;
+        }
     }
 
     &__news-block {
@@ -79,6 +117,16 @@
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
+
+        @include mobile {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        @include mobile-small {
+            padding: 26px 17px;
+        }
     }
 
     &__news-block--1 {
@@ -112,6 +160,16 @@
         border-radius: 30px;
         padding: 46px 57px;
         box-shadow: 0 20px 35px 0 rgba(167, 167, 167, 0.25);
+
+        @media (max-width: 1014px) {
+            padding: 36px 42px;
+            height: auto;
+        }
+
+        @include mobile {
+            position: static;
+            top: 0;
+        }
     }
 
     &__username {
@@ -160,9 +218,17 @@
                 background-color: var(--color-yellow);
             }
         }
-    }
 
-    &__column--4 {
-        width: 50%;
+        @include tablet {
+            width: 100%;
+        }
+
+        @include mobile {
+            width: 220px;
+        }
+
+        @include mobile-small {
+            width: 100%;
+        }
     }
 }
