--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -15,7 +15,7 @@
     --color-darkyellow: #E7CD6E;
     --color-orange: #FFA858;
     --color-gray: #D4D4D4;
-    --color-dark-gray: #525C60;
+    --color-darkgray: #525C60;
     --color-lightgray: #F9F8F8;
     --color-gray-alt: #EFF6F1;
 
