--- a/frontend/src/components/CreativeSection/CreativeSection.scss
+++ b/frontend/src/components/CreativeSection/CreativeSection.scss
@@ -1,1 +1,76 @@
 @use "../../styles/index" as *;
+
+.creative {
+
+    &__inner {
+        max-width: 100% !important;
+        padding-block: 200px 150px;
+    }
+
+    &__row {}
+
+    &__column {
+        width: 50%;
+    }
+
+    &__column--1 {
+        align-items: end;
+        padding-right: 40px;
+    }
+
+    &__image {}
+
+    &__column--2 {}
+
+    &__promo {}
+
+    &__title {
+        margin-block: 10px;
+        width: 50%;
+    }
+
+    &__description {
+        margin-bottom: 40px;
+        width: 70%;
+    }
+
+    &__list {
+        display: flex;
+        gap: 65px;
+    }
+
+    &__list-item {
+        position: relative;
+
+        &::after {
+            position: absolute;
+            content: "";
+            top: 0;
+            left: 0;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        &:first-child {
+            padding-left: 66px;
+            width: 292px;
+
+            &::after {
+                width: 51px;
+                height: 48px;
+                background-image: url("../../images/icons/modern-agriculture.svg");
+            }
+        }
+
+        &:last-child {
+            padding-left: 71px;
+            width: 290px;
+
+            &::after {
+                width: 56px;
+                height: 56px;
+                background-image: url("../../images/icons/no-hormones.svg");
+            }
+        }
+    }
+}
