--- a/frontend/src/components/WhyUsSection/WhyUsSection.scss
+++ b/frontend/src/components/WhyUsSection/WhyUsSection.scss
@@ -81,7 +81,7 @@
 
             & circle {
                 &:last-child {
-                    color: var(--color-white);
+                    color: #ECECEC;
                 }
             }
         }
