--- a/frontend/src/components/OfferSection/OfferSection.scss
+++ b/frontend/src/components/OfferSection/OfferSection.scss
@@ -7,6 +7,22 @@
 
     &__row {
         padding-block: 190px;
+
+        @include laptop {
+            padding-block: 170px;
+        }
+
+        @include tablet {
+            padding-block: 140px;
+        }
+
+        @include mobile {
+            padding-block: 110px;
+        }
+
+        @include mobile-small {
+            padding-block: 80px;
+        }
     }
 
     &__column {
@@ -21,15 +37,39 @@
         color: var(--color-white) !important;
         margin-top: 8px;
         margin-inline: auto;
+        text-align: center;
     }
 
     &__list {
         margin-top: 30px;
         display: flex;
         gap: 20px;
+
+        @include tablet {
+            width: 90%;
+            flex-wrap: wrap;
+            margin-inline: auto;
+        }
+
+        @include mobile {
+            width: 100%;
+        }
+
+        @include mobile-small {
+            width: 80%;
+            gap: 30px;
+        }
     }
 
-    &__list-item {}
+    &__list-item {
+        @include tablet {
+            width: calc(50% - 10px);
+        }
+
+        @include mobile-small {
+            width: 100%;
+        }
+    }
 
     &__product {
         display: block;
@@ -54,6 +94,7 @@
 
     &__product-image {
         border-radius: 30px;
+        width: 100%;
     }
 
     &__product-title {
