styles(grow): write adaptive SCSS styles for GrowSection component

--- a/frontend/src/components/GrowSection/GrowSection.scss
+++ b/frontend/src/components/GrowSection/GrowSection.scss
@@ -1,7 +1,25 @@
+@use "../../styles/index" as *;
+
 .grow {
 
     &__inner {
         padding-block: 200px;
+
+        @include laptop {
+            padding-block: 180px;
+        }
+
+        @include tablet {
+            padding-block: 150px;
+        }
+
+        @include mobile {
+            padding-block: 110px;
+        }
+
+        @include mobile-small {
+            padding-block: 70px;
+        }
     }
 
     &__row {}
@@ -24,6 +42,14 @@
         width: 490px;
         text-align: center;
         margin-block: 8px 45px;
+
+        @include mobile {
+            width: 80%;
+        }
+
+        @include mobile-small {
+            width: 90%;
+        }
     }
 
     &__row--2 {}
@@ -31,6 +57,7 @@
     &__futures-wrap {}
 
     &__grid {
+        width: 100%;
         display: grid;
         grid-template-columns: 396px 1fr 396px;
         grid-template-rows: 244px 184px auto;
@@ -38,6 +65,22 @@
             "b g e"
             "c g f";
         gap: 40px;
+
+        @include laptop {
+            grid-template-columns: 296px 1fr 296px;
+            grid-template-rows: repeat(2, 244px) auto;
+        }
+
+        @include tablet {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(4, auto);
+            grid-template-areas:
+                "a d"
+                "b e"
+                "c f"
+                "g g";
+            gap: 20px;
+        }
     }
 
     &__feature {}
@@ -48,6 +91,22 @@
         gap: 10px;
     }
 
+    &__image {
+        @include tablet {
+            width: 50%;
+            margin-inline: auto;
+            margin-top: 30px;
+        }
+
+        @include mobile {
+            width: 80%;
+        }
+
+        @include mobile-small {
+            width: 90%;
+        }
+    }
+
     &__grid-column--a,
     &__grid-column--b,
     &__grid-column--c {
@@ -55,12 +114,24 @@
 
         & .grow__feature-description {
             text-align: end;
+
+            @include tablet {
+                text-align: start;
+            }
+        }
+
+        @include tablet {
+            align-items: start;
         }
     }
 
     &__grid-column--a,
     &__grid-column--d {
         margin-top: 60px;
+
+        @include laptop {
+            margin-top: 0;
+        }
     }
 
     &__grid-column--a {
@@ -77,6 +148,10 @@
 
     &__grid-column--g {
         grid-area: g;
+
+        @include laptop {
+            justify-content: center;
+        }
     }
 
     &__grid-column--d {
@@ -91,7 +166,10 @@
         grid-area: f;
     }
 
-    &__feature-icon {}
+    &__feature-icon {
+        width: 55px;
+        height: 55px;
+    }
 
     &__feature-title {}
 
@@ -106,5 +184,13 @@
     &__button {
         display: block;
         margin-inline: auto;
+
+        @include laptop {
+            margin-top: 60px;
+        }
+
+        @include tablet {
+            margin-top: 0;
+        }
     }
 }
