--- a/frontend/src/components/GrowSection/GrowSection.scss
+++ b/frontend/src/components/GrowSection/GrowSection.scss
@@ -181,6 +181,10 @@
         width: 100%;
     }
 
+    &__link {
+        display: block;
+    }
+
     &__button {
         display: block;
         margin-inline: auto;
