--- a/frontend/src/components/VideoSection/VideoSection.scss
+++ b/frontend/src/components/VideoSection/VideoSection.scss
@@ -1,34 +1,85 @@
+@use "../../styles/index" as *;
+
 .video {
 
     &__inner {
         max-width: 100% !important;
         margin-bottom: 140px;
+
+        @include laptop {
+            padding-inline: 0 !important;
+        }
+
+        @include tablet {
+            margin-bottom: 110px;
+        }
+
+        @include mobile {
+            margin-bottom: 70px;
+        }
+
+        @include mobile-small {
+            margin-bottom: 40px;
+        }
     }
 
     &__row {}
 
     &__column {
-        position: relative;
         width: 100%;
-        height: 1070px;
-        padding-top: 180px;
-        overflow: hidden;
+        height: auto;
+        position: relative;
     }
 
     &__movie {
         width: 100%;
-        position: absolute;
-        top: 0;
         z-index: -1;
     }
 
+    &__content-wrap {
+        width: 100%;
+        position: absolute;
+        top: 180px;
+        z-index: 9;
+
+        @include laptop {
+            top: 140px;
+        }
+
+        @include tablet {
+            top: 70px;
+        }
+
+        @include mobile {
+            top: 30px;
+            transform: scale(0.6);
+        }
+
+        @media (max-width: 640px) {
+            top: -20px;
+        }
+
+        @include mobile-small {
+            top: 25%;
+        }
+    }
+
     &__promo {
+        display: block;
         text-align: center;
+
+        @include mobile-small {
+            display: none;
+        }
     }
 
     &__title {
         text-align: center;
         margin-top: 8px;
+
+        @include mobile-small {
+            display: none;
+        }
     }
 
     &__description {
@@ -36,9 +87,18 @@
         width: 670px;
         margin-inline: auto;
         margin-top: 24px;
+
+        @include mobile {
+            width: 90%;
+        }
+
+        @include mobile-small {
+            display: none;
+        }
     }
 
     &__button {
+        display: block;
         width: 107px;
         height: 107px;
         background-color: var(--color-green);
@@ -46,5 +106,13 @@
         color: var(--color-white);
         margin-inline: auto;
         margin-top: 50px;
+
+        @include tablet {
+            margin-top: 30px;
+        }
+
+        @include mobile-small {
+            margin-top: 0;
+        }
     }
 }
