--- a/frontend/src/components/PortfolioItemCard/PortfolioItemCard.scss
+++ b/frontend/src/components/PortfolioItemCard/PortfolioItemCard.scss
@@ -10,6 +10,7 @@
 
             &:hover,
             &:focus-visible {
+
                 .portfolio-item-card__hover-decoration {
                     opacity: 1;
                 }
@@ -20,6 +21,7 @@
 
             &:hover,
             &:focus-visible {
+
                 .portfolio-item-card__hover-decoration {
                     opacity: 0;
                 }
@@ -27,31 +29,53 @@
         }
     }
 
-    &__hover-decoration {
-        position: absolute;
+    &__image-wrap {
+        position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 5%;
-        width: 90%;
-        height: 75%;
+        width: 100%;
+        transition: opacity var(--transition);
+    }
+
+    &__hover-decoration {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         opacity: 0;
         transition: opacity var(--transition);
     }
 
     &__hover-decoration-background {
-        width: 100%;
-        height: 100%;
+        position: absolute;
+        width: 90%;
+        height: 90%;
+        margin: 5%;
         background-color: var(--color-white);
         border-radius: 30px;
         opacity: 0.8;
+
+        @include tablet {
+            border-radius: 25px;
+        }
+
+        @include mobile {
+            border-radius: 20px;
+        }
+
+        @include mobile-small {
+            border-radius: 15px;
+        }
     }
 
     &__hover-decoration-svg {
         position: absolute;
         color: var(--color-green);
-        opacity: 1;
-        z-index: 9;
 
         & path {
             color: var(--color-white);
@@ -61,6 +85,18 @@
     &__image {
         width: 100%;
         border-radius: 30px;
+
+        @include tablet {
+            border-radius: 25px;
+        }
+
+        @include mobile {
+            border-radius: 20px;
+        }
+
+        @include mobile-small {
+            border-radius: 15px;
+        }
     }
 
     &__title {
